--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "me.xueshi.netstat-cat",
+  "name": "Netstat-Cat",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "productName": "Netstat Cat",
+  "description": "A network monitoring tool for Windows",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "xueshi.me",
+  "homepage": "https://github.com/XueshiQiao/netstat-cat",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
