--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.4",
+    "prettier": "3.8.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "tailwindcss": "^3.4.17",
