--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -20,13 +20,13 @@ nsis:
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
 mac:
-  entitlementsInherit: build/entitlements.mac.plist
+  entitlementsInherit: resources/entitlements.mac.plist
   icon: ./resources/icon.icns
-  extendInfo:
-    - NSCameraUsageDescription: Application requests access to the device's camera.
-    - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
-    - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
-    - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
+  # extendInfo:
+  # - NSCameraUsageDescription: Application requests access to the device's camera.
+  # - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
+  # - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
+  # - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
   notarize: false
 dmg:
   artifactName: ${name}-${version}.${ext}
